# Melt_Viscosity_Predictor

./: .gitignore  Melt Viscosity Data.xlsx  Model_Evaluation.xlsx  PCA.ipynb  Polymer-SMILES-FP.csv  Polymer-SMILES.xlsx  Post-Processing.ipynb  Pre-Processing.ipynb  README.md  Zero_Shear_Visualiztion.ipynb  config.yaml  data_analysis.ipynb  extrapolation_curves.ipynb  get_polymers.ipynb  learning_curves.py  learning_curves_plot.ipynb  low_Mw_augmentation.ipynb  modified_GPR.ipynb  modified_GPR_Shear.ipynb  pyproject.toml  query_polymer_smiles2.ipynb  train_models.py  viscosityNN.ipynb
.ipynb_checkpoints/: modified_GPR-checkpoint.ipynb  modified_GPR_Shear-checkpoint.ipynb
Data/: ANN_Mw_const.pickle  ANN_WLF_const.pickle  ANN_shear_const.pickle  EntanglementMW.xlsx  HypNet_Mw_const.pickle  HypNet_WLF_const.pickle  HypNet_shear_const.pickle  Mw_const_data.pickle  Polymer-SMILES-FP2.csv  Polymer-SMILES-FP2.xlsx  Polymer-SMILES.xlsx  Polymer-SMILES2.xlsx  SMILES-2022-10-20.xlsx  Validation Data.xlsx  ann_pred_const.pickle  ann_pred_const_wlf.pickle  custom_fp.xlsx  full_data_03_08_aug.xlsx  full_data_03_08_aug_MOD.xlsx  full_data_09_17.csv  full_data_10_01.xlsx  full_data_10_08.xlsx  full_data_2021-11-05.xlsx  full_data_2021-11-08.xlsx  full_data_2022-01-19.xlsx  full_data_2022-01-19_MOD.xlsx  full_data_2022-03-08.xlsx  gpr_LC.pickle  gpr_Mw_const.pickle  gpr_WLF_const.pickle  gpr_pred_const.pickle  gpr_pred_const_wlf.pickle  gpr_shear_const.pickle  polymer_master_data_v20200625_1.xlsx  shear_ann_pred_const.pickle  shear_const_data.pickle  shear_data_10_03.xlsx  (+12 more)
(+10819 files in other folders)
